# AESkyrimPlugin

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: PCH.h  main.cpp
